Update build.sbt and DAGConfigurationSpec.scala for domain migration